force-app/main/default/objects/Weekly_Beat_Plan__c/Weekly_Beat_Plan__c.object-meta.xml
<CustomObject>
    <label>Weekly Beat Plan</label>
    <nameField>
        <displayFormat>WBP-{0000}</displayFormat>
        <label>Weekly Beat Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Beat Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>