force-app/main/default/objects/Weekly_Beat_Plan__c/fields/End_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>End_Day_of_Week__c</fullName>
    <label>End Day of Week</label>
    <type>Date</type>
</CustomField>