force-app/main/default/objects/Weekly_Beat_Plan__c/fields/Monthly_Beat_Plan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Beat_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Beat Plan</label>
    <referenceTo>Monthly_Beat_Plan__c</referenceTo>
    <relationshipLabel>Weekly Beat Plans</relationshipLabel>
    <relationshipName>Weekly_Beat_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>