force-app/main/default/objects/Weekly_Beat_Plan__c/fields/Start_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Start_Day_of_Week__c</fullName>
    <label>Start Day of Week</label>
    <type>Date</type>
</CustomField>