force-app/main/default/objects/Weekly_Beat_Plan__c/fields/Week_Format__c.field-meta.xml
<CustomField>
    <fullName>Week_Format__c</fullName>
    <formula>TEXT(DAY(Start_Day_of_Week__c)) &amp; &quot; &quot; &amp;  CASE(MONTH(Start_Day_of_Week__c),
    1, &quot;Jan&quot;,
    2, &quot;Feb&quot;,
    3, &quot;Mar&quot;,
    4, &quot;Apr&quot;,
    5, &quot;May&quot;,
    6, &quot;Jun&quot;,
    7, &quot;Jul&quot;,
    8, &quot;Aug&quot;,
    9, &quot;Sep&quot;,
    10, &quot;Oct&quot;,
    11, &quot;Nov&quot;,
    12, &quot;Dec&quot;,
    &quot;N/A&quot;
)  &amp; &quot; - &quot; &amp;
TEXT(DAY(End_Day_of_Week__c)) &amp; &quot; &quot; &amp;  CASE(MONTH(End_Day_of_Week__c),
    1, &quot;Jan&quot;,
    2, &quot;Feb&quot;,
    3, &quot;Mar&quot;,
    4, &quot;Apr&quot;,
    5, &quot;May&quot;,
    6, &quot;Jun&quot;,
    7, &quot;Jul&quot;,
    8, &quot;Aug&quot;,
    9, &quot;Sep&quot;,
    10, &quot;Oct&quot;,
    11, &quot;Nov&quot;,
    12, &quot;Dec&quot;,
    &quot;N/A&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Format</label>
    <type>Text</type>
</CustomField>