force-app/main/default/objects/Weekly_Beat_Plan__c/fields/Week_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Week_Identifier__c</fullName>
    <label>Week Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W1</fullName>
            </value>
            <value>
                <fullName>W2</fullName>
            </value>
            <value>
                <fullName>W3</fullName>
            </value>
            <value>
                <fullName>W4</fullName>
            </value>
            <value>
                <fullName>W5</fullName>
            </value>
            <value>
                <fullName>W6</fullName>
            </value>
            <value>
                <fullName>W7</fullName>
            </value>
            <value>
                <fullName>W8</fullName>
            </value>
            <value>
                <fullName>W9</fullName>
            </value>
            <value>
                <fullName>W10</fullName>
            </value>
            <value>
                <fullName>W11</fullName>
            </value>
            <value>
                <fullName>W12</fullName>
            </value>
            <value>
                <fullName>W13</fullName>
            </value>
            <value>
                <fullName>W14</fullName>
            </value>
            <value>
                <fullName>W15</fullName>
            </value>
            <value>
                <fullName>W16</fullName>
            </value>
            <value>
                <fullName>W17</fullName>
            </value>
            <value>
                <fullName>W18</fullName>
            </value>
            <value>
                <fullName>W19</fullName>
            </value>
            <value>
                <fullName>W20</fullName>
            </value>
            <value>
                <fullName>W21</fullName>
            </value>
            <value>
                <fullName>W22</fullName>
            </value>
            <value>
                <fullName>W23</fullName>
            </value>
            <value>
                <fullName>W24</fullName>
            </value>
            <value>
                <fullName>W25</fullName>
            </value>
            <value>
                <fullName>W26</fullName>
            </value>
            <value>
                <fullName>W27</fullName>
            </value>
            <value>
                <fullName>W28</fullName>
            </value>
            <value>
                <fullName>W29</fullName>
            </value>
            <value>
                <fullName>W30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>