force-app/main/default/objects/Weekly_Beat_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Day_of_Week__c</columns>
    <columns>End_Day_of_Week__c</columns>
    <columns>Week_Number__c</columns>
    <columns>Year__c</columns>
    <columns>Monthly_Beat_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>